--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.highlight {
+  animation-name: blinker;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(1.0,0,0,1.0);
+  animation-duration: 1s;
+}
+
+@keyframes blinker {
+  from {
+    background-color: #fff;
+  }
+  to {
+    background-color: #ffffd7;
+  }
+}
